# harbor-cli

./: .gitattributes  Cargo.toml  README.md  openapi-generator-cli.config.json
api-client/: Cargo.toml  README.md
api-client/.openapi-generator/: FILES
api-client/docs/: Access.md  Accessory.md  ActionRequest.md  AdditionLink.md  Artifact.md  ArtifactApi.md  AuditLog.md  AuditlogApi.md  AuthproxySetting.md  BoolConfigItem.md  ComponentHealthStatus.md  Configurations.md  ConfigurationsResponse.md  ConfigurationsResponseScanAllPolicy.md  ConfigurationsResponseScanAllPolicyParameter.md  ConfigureApi.md  CveAllowlist.md  CveAllowlistItem.md  DangerousArtifact.md  DangerousCve.md  Error.md  ExecHistory.md  Execution.md  FilterStyle.md  GcApi.md  GcHistory.md  GeneralInfo.md  HealthApi.md  Icon.md  IconApi.md  ImmutableApi.md  ImmutableRule.md  ImmutableSelector.md  Instance.md  IntegerConfigItem.md  InternalConfigurationValue.md  IsDefault.md  JobQueue.md  JobserviceApi.md  Label.md  (+141 more)
api-client/src/apis/: artifact_api.rs  auditlog_api.rs  configuration.rs  configure_api.rs  gc_api.rs  health_api.rs  icon_api.rs  immutable_api.rs  jobservice_api.rs  label_api.rs  ldap_api.rs  member_api.rs  mod.rs  oidc_api.rs  permissions_api.rs  ping_api.rs  preheat_api.rs  project_api.rs  project_metadata_api.rs  purge_api.rs  quota_api.rs  registry_api.rs  replication_api.rs  repository_api.rs  retention_api.rs  robot_api.rs  robotv1_api.rs  (+14 more)
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  main.rs
cli/src/commands/: health.rs  ping.rs
templates/reqwest/: configuration.mustache
(+144 files in other folders)
